docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.mdx
---
title: MultivariateNormalDistribution (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution
---

# MultivariateNormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/multivariate_normal_distribution.py" signature="MultivariateNormalDistribution(num_qubits, low=None, high=None, mu=None, sigma=None)" modifiers="class">
  The Multivariate Normal Distribution.

  Provides a discretized and truncated normal distribution loaded into a quantum state. Truncation bounds are given by lower and upper bound and discretization is specified by the number of qubits per dimension.

  **Parameters**

  *   **num\_qubits** (`Union`\[`List`\[`int`], `ndarray`]) – Number of qubits per dimension
  *   **low** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Lower bounds per dimension
  *   **high** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Upper bounds per dimension
  *   **mu** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Expected values
  *   **sigma** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Co-variance matrix

  ## Attributes

  <span id="multivariatenormaldistribution-dimension" />

  ### dimension

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.dimension">
    returns dimensions
  </Attribute>

  <span id="multivariatenormaldistribution-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.high">
    returns high
  </Attribute>

  <span id="multivariatenormaldistribution-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.low">
    returns low
  </Attribute>

  <span id="multivariatenormaldistribution-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_qubits">
    returns num qubits
  </Attribute>

  <span id="multivariatenormaldistribution-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="multivariatenormaldistribution-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_values">
    returns number of values
  </Attribute>

  <span id="multivariatenormaldistribution-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities">
    returns probabilities
  </Attribute>

  <span id="multivariatenormaldistribution-probabilities-vector" />

  ### probabilities\_vector

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities_vector">
    returns probabilities vector
  </Attribute>

  <span id="multivariatenormaldistribution-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.values">
    returns values
  </Attribute>

  ## Methods

  <span id="multivariatenormaldistribution-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build" signature="MultivariateNormalDistribution.build(qc, q, q_ancillas=None, params=None)" />

  <span id="multivariatenormaldistribution-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled" signature="MultivariateNormalDistribution.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="multivariatenormaldistribution-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse" signature="MultivariateNormalDistribution.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="multivariatenormaldistribution-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse_power" signature="MultivariateNormalDistribution.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatenormaldistribution-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_power" signature="MultivariateNormalDistribution.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatenormaldistribution-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse" signature="MultivariateNormalDistribution.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="multivariatenormaldistribution-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse_power" signature="MultivariateNormalDistribution.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatenormaldistribution-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_power" signature="MultivariateNormalDistribution.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatenormaldistribution-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits" signature="MultivariateNormalDistribution.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="multivariatenormaldistribution-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits_controlled" signature="MultivariateNormalDistribution.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="multivariatenormaldistribution-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.pdf_to_probabilities" signature="MultivariateNormalDistribution.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    pdf to probabilities
  </Function>

  <span id="multivariatenormaldistribution-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas" signature="MultivariateNormalDistribution.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="multivariatenormaldistribution-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas_controlled" signature="MultivariateNormalDistribution.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

