docs/api/qiskit/0.24/qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.mdx
---
title: MultivariateNormalDistribution
description: API reference for qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution
---

<span id="qiskit-aqua-components-uncertainty-models-multivariatenormaldistribution" />

# qiskit.aqua.components.uncertainty\_models.MultivariateNormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/uncertainty_models/multivariate_normal_distribution.py" signature="MultivariateNormalDistribution(num_qubits, low=None, high=None, mu=None, sigma=None)">
  The Multivariate Normal Distribution.

  Provides a discretized and truncated normal distribution loaded into a quantum state. Truncation bounds are given by lower and upper bound and discretization is specified by the number of qubits per dimension.

  **Parameters**

  *   **num\_qubits** (`Union`\[`List`\[`int`], `ndarray`]) – Number of qubits per dimension
  *   **low** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Lower bounds per dimension
  *   **high** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Upper bounds per dimension
  *   **mu** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Expected values
  *   **sigma** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Co-variance matrix

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.__init__" name="__init__" signature="__init__(num_qubits, low=None, high=None, mu=None, sigma=None)">
    **Parameters**

    *   **num\_qubits** (`Union`\[`List`\[`int`], `ndarray`]) – Number of qubits per dimension
    *   **low** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Lower bounds per dimension
    *   **high** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Upper bounds per dimension
    *   **mu** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Expected values
    *   **sigma** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Co-variance matrix
  </Function>

  ## Methods

  |                                                                                                                                                                                                                                                                        |                                                                       |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.__init__ "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.__init__")(num\_qubits\[, low, high, mu, sigma])                                             | **type num\_qubits**`Union`\[`List`\[`int`], `ndarray`]               |
  | [`build`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build")(qc, q\[, q\_ancillas, params])                                                             |                                                                       |
  | [`build_controlled`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled")(qc, q, q\_control\[, …])                                  | Adds corresponding controlled sub-circuit to given circuit            |
  | [`build_controlled_inverse`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse")(qc, q, q\_control\[, …])          | Adds controlled inverse of corresponding sub-circuit to given circuit |
  | [`build_controlled_inverse_power`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse_power "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse_power")(qc, q, …\[, …]) | Adds controlled, inverse, power of corresponding circuit.             |
  | [`build_controlled_power`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_power "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_power")(qc, q, q\_control, power)               | Adds controlled power of corresponding circuit.                       |
  | [`build_inverse`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse")(qc, q\[, q\_ancillas])                                             | Adds inverse of corresponding sub-circuit to given circuit            |
  | [`build_inverse_power`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse_power "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse_power")(qc, q, power\[, q\_ancillas])                    | Adds inverse power of corresponding circuit.                          |
  | [`build_power`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_power "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_power")(qc, q, power\[, q\_ancillas])                                            | Adds power of corresponding circuit.                                  |
  | [`get_num_qubits`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits")()                                                               | returns number of qubits                                              |
  | [`get_num_qubits_controlled`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits_controlled "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits_controlled")()                              | returns number of qubits controlled                                   |
  | [`pdf_to_probabilities`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.pdf_to_probabilities "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.pdf_to_probabilities")(pdf, low, high, num\_values)                  | pdf to probabilities                                                  |
  | [`required_ancillas`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas")()                                                      | returns required ancillas                                             |
  | [`required_ancillas_controlled`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas_controlled "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas_controlled")()                     | returns required ancillas controlled                                  |

  ## Attributes

  |                                                                                                                                                                                                                          |                                     |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------- |
  | [`dimension`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.dimension "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.dimension")                                  | returns dimensions                  |
  | [`high`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.high "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.high")                                                 | returns high                        |
  | [`low`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.low "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.low")                                                    | returns low                         |
  | [`num_qubits`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_qubits "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_qubits")                               | returns num qubits                  |
  | [`num_target_qubits`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_target_qubits "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_target_qubits")          | Returns the number of target qubits |
  | [`num_values`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_values "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_values")                               | returns number of values            |
  | [`probabilities`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities")                      | returns probabilities               |
  | [`probabilities_vector`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities_vector "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities_vector") | returns probabilities vector        |
  | [`values`](#qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.values "qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.values")                                           | returns values                      |

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build" name="build" signature="build(qc, q, q_ancillas=None, params=None)" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled" name="build_controlled" signature="build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse" name="build_controlled_inverse" signature="build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_inverse_power" name="build_controlled_inverse_power" signature="build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_controlled_power" name="build_controlled_power" signature="build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse" name="build_inverse" signature="build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_inverse_power" name="build_inverse_power" signature="build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.build_power" name="build_power" signature="build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### dimension

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.dimension" name="dimension" signature="property dimension">
    returns dimensions
  </Function>

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits" name="get_num_qubits" signature="get_num_qubits()">
    returns number of qubits
  </Function>

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.get_num_qubits_controlled" name="get_num_qubits_controlled" signature="get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  ### high

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.high" name="high" signature="property high">
    returns high
  </Function>

  ### low

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.low" name="low" signature="property low">
    returns low
  </Function>

  ### num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_qubits" name="num_qubits" signature="property num_qubits">
    returns num qubits
  </Function>

  ### num\_target\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_target_qubits" name="num_target_qubits" signature="property num_target_qubits">
    Returns the number of target qubits
  </Function>

  ### num\_values

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.num_values" name="num_values" signature="property num_values">
    returns number of values
  </Function>

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.pdf_to_probabilities" name="pdf_to_probabilities" signature="static pdf_to_probabilities(pdf, low, high, num_values)">
    pdf to probabilities
  </Function>

  ### probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities" name="probabilities" signature="property probabilities">
    returns probabilities
  </Function>

  ### probabilities\_vector

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.probabilities_vector" name="probabilities_vector" signature="property probabilities_vector">
    returns probabilities vector
  </Function>

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas" name="required_ancillas" signature="required_ancillas()">
    returns required ancillas
  </Function>

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.required_ancillas_controlled" name="required_ancillas_controlled" signature="required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>

  ### values

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateNormalDistribution.values" name="values" signature="property values">
    returns values
  </Function>
</Class>

